fixed scrollbar

--- a/static/css/auction.css
+++ b/static/css/auction.css
@@ -161,9 +161,10 @@ body {
 }
 
 .leftNav ul {
-	/*margin-top: 50px;*/
+	/*margin-top: 110px;*/
 	width: 100%;
-	height: 89.5%;
+	/*height: 89.5%;*/
+	top: 65px;
 	bottom:0;
 	position: absolute;
 	/*top: 64px;*/
